[project]
name = "not-enough-mods"
version = "0.1.0"
description = "An IRC bot that automatically keeps mods in Not Enough Mods up-to-date"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "Jinja2>=3.1",
    "PyYAML>=6.0",
    "packaging>=23.0",
    "requests>=2.31",
]
