[project]
name = "not-enough-mods"
version = "0.1.0"
description = "An IRC bot that automatically keeps mods in Not Enough Mods up-to-date"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "Jinja2>=3.1",
    "PyYAML>=6.0",
    "packaging>=23.0",
    "pyparsing>=3.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["commands", "irc_handlers"]
